--- a/docs/modules/ROOT/pages/includes/quarkus-log-json.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-log-json.adoc
@@ -42,6 +42,22 @@ endif::add-copy-button-to-env-var[]
 |`false`
 
 
+a| [[quarkus-log-json_quarkus.log.json.socket.enable]]`link:#quarkus-log-json_quarkus.log.json.socket.enable[quarkus.log.json.socket.enable]`
+
+[.description]
+--
+Determine whether to enable the JSON socket formatting extension, which disables "normal" socket formatting.
+
+ifdef::add-copy-button-to-env-var[]
+Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_JSON_SOCKET_ENABLE+++[]
+endif::add-copy-button-to-env-var[]
+ifndef::add-copy-button-to-env-var[]
+Environment variable: `+++QUARKUS_LOG_JSON_SOCKET_ENABLE+++`
+endif::add-copy-button-to-env-var[]
+--|boolean 
+|`false`
+
+
 a| [[quarkus-log-json_quarkus.log.json.fields.arguments.field-name]]`link:#quarkus-log-json_quarkus.log.json.fields.arguments.field-name[quarkus.log.json.fields.arguments.field-name]`
 
 [.description]
